--- a/templates/ctb_about.html
+++ b/templates/ctb_about.html
@@ -9,7 +9,7 @@
 <div class="card container">
     <ul class="nav nav-tabs">
         <li style="font-size: large"><a href="{{ url_for('ctb_run')}}"><strong>Run CTB</strong></a></li>
-        <li style="font-size: large"><a href="{{ url_for('ctb_download')}}"><strong>Download</strong></a></li>
+        <li style="font-size: large"><a href="{{ url_for('ctb_result')}}"><strong>Result</strong></a></li>
         <li class="active" style="font-size: large"><a href="{{ url_for('ctb_about')}}" style="font-size: large"><strong>About</strong></a></li>
     </ul>
 </div>
