--- a/templates/ctb_result.html
+++ b/templates/ctb_result.html
@@ -10,7 +10,7 @@
             <td>
                 <ul class="nav nav-tabs">
                     <li style="font-size: large"><a href="{{ url_for('ctb_run')}}"><strong>CTB</strong></a></li>
-                    <li class="active" style="font-size: large"><a href="{{ url_for('ctb_download')}}"><strong>Download</strong></a></li>
+                    <li class="active" style="font-size: large"><a href="{{ url_for('ctb_result')}}"><strong>Result</strong></a></li>
                 </ul>
             </td>
         </tr>
