update sheet name

--- a/templates/ctb_run.html
+++ b/templates/ctb_run.html
@@ -43,7 +43,7 @@
                         <strong>{{ form.org.label }}</strong><br>{{ form.org (class='form-control') }}<br>
                         <strong>{{ form.bu.label }}</strong><br>{{ form.bu (class='form-control')}}<br>
                         <strong>{{ form.class_code_exclusion.label }}</strong><br>{{ form.class_code_exclusion (class='form-control')}}<br>
-                        <strong>{{ form.description.label }}</strong><br>{{ form.description  (class='form-control')}}<br><br>
+                        <strong>{{ form.description.label }}</strong><br>{{ form.description  (class='form-control')}}<br>
                     </div>
                 </td>
                 <td width="5%"></td>
