--- a/templates/ctb_result.html
+++ b/templates/ctb_result.html
@@ -21,49 +21,19 @@
         {{ form.csrf_token }}
          <!-- below for flashed messages -->
         <table style="border-collapse:collapse" border="0" cellspacing="0px" width="88%" align="center">
-                <tr>
-                  <td align="left" width="95%">
-                        {% if get_flashed_messages()|length>0 %}
-                          {% for message in get_flashed_messages(with_categories=True) %}
-                            <div class="alert alert-{{ message[0] }}" role="alert">
-                                <button type="button" class="close" data-dismiss="alert">&times;</button>
-                                {{ message[1] }}
-                            </div>
-                          {% endfor %}
-                        {% endif %}
-                  </td>
-                </tr>
-
-
-                <tr>  <!-- For deleting the files created by user -->
-                    <td width="95%">
-                        <br>
-                        <p><strong> Delete files created by yourself:</strong></p>
-                                <table width="840" border="0" cellspacing="1px" align="left" style="border-color: #c5c5c5;">
-                                    <tr>
-                                        <td align="left" width="85%">
-                                            {{ form.file_name_delete (class='form-control')}}
-                                        </td>
-                                        <td align="center" width="15%">
-                                            {{ form.submit_delete (class='btn-primary btn-sm')}}
-                                        </td>
-                                    </tr>
-                                </table>
-                    </td>
-                </tr>
-
                 <tr>  <!-- For downloading the allocation resut files -->
                     <td width="95%">
-                        <br><br><br>
+                        <br><br>
                             {% if files_output|length>0 %}
                                 <p><strong> CTB files generated (record kept for {{ output_record_days }} days):</strong></p>
                                 <table border="1" cellspacing="1px" align="left" style="border-color: #c5c5c5;">
                                     <tbody>
                                         <tr>
-                                            <td width="400"><span style="font-size: large;">&nbsp;&nbsp;File name</span></td>
+                                            <td width="500"><span style="font-size: large;">&nbsp;&nbsp;File name</span></td>
                                             <td width="200"><span style="font-size: large">&nbsp;&nbsp;Creation time</span></td>
                                             <td width="120"><span style="font-size: large">&nbsp;&nbsp;File size</span></td>
-                                            <td width="120">&nbsp;&nbsp;File download</td>
+                                            <td width="120" align="center">File download</td>
+                                            <td width="120" align="center">File delete</td>
                                         </tr>
                                         {% for row in files_output %}
                                             <tr>
@@ -72,6 +42,9 @@
                                                 {% endfor %}
                                                 <td align="center">
                                                     <a href="{{ url_for('download_file_output',filename=row[0]) }}">download</a>
+                                                </td>
+                                                <td align="center">
+                                                    <a href="{{ url_for('delete_file_output',login_user=login_user,filename=row[0]) }}">D</a>
                                                 </td>
                                             </tr>
                                         {% endfor %}
@@ -89,10 +62,11 @@
                                     <p><strong> Input files uploaded by user (record kept for {{ upload_record_days }} days):</strong></p>
                                     <table style="border-collapse:collapse" border="1" cellspacing="0px" align="left">
                                         <tr>
-                                            <td width="400"><span style="font-size: large;">&nbsp;&nbsp;File name</span></td>
+                                            <td width="500"><span style="font-size: large;">&nbsp;&nbsp;File name</span></td>
                                             <td width="200"><span style="font-size: large">&nbsp;&nbsp;Creation time</span></td>
                                             <td width="120"><span style="font-size: large">&nbsp;&nbsp;File size</span></td>
-                                            <td width="120">&nbsp;&nbsp;File download</td>
+                                            <td width="120" align="center">File download</td>
+                                            <td width="120" align="center">File delete</td>
                                         </tr>
                                         {% for row in files_uploaded %}
                                             <tr>
@@ -101,6 +75,40 @@
                                                 {% endfor %}
                                                 <td align="center">
                                                     <a href="{{ url_for('download_file_upload',filename=row[0]) }}">download</a>
+                                                </td>
+                                                <td align="center">
+                                                    <a href="{{ url_for('delete_file_upload',login_user=login_user,filename=row[0]) }}">D</a>
+                                                </td>
+                                            </tr>
+                                        {% endfor %}
+                                    </table>
+                                {% endif %}
+                    </td>
+                </tr>
+
+                <tr> <!-- For removed trash files -->
+                    <td width="95%">
+                        <br><br><br>
+                                {% if files_trash|length>0 %}
+                                    <p><strong> Trash files (record kept for {{ trash_record_days }} days):</strong></p>
+                                    <table style="border-collapse:collapse" border="1" cellspacing="0px" align="left">
+                                        <tr>
+                                            <td width="500"><span style="font-size: large;">&nbsp;&nbsp;File name</span></td>
+                                            <td width="200"><span style="font-size: large">&nbsp;&nbsp;Creation time</span></td>
+                                            <td width="120"><span style="font-size: large">&nbsp;&nbsp;File size</span></td>
+                                            <td width="120">&nbsp;&nbsp;File download</td>
+                                            <td width="120">&nbsp;&nbsp;File recover</td>
+                                        </tr>
+                                        {% for row in files_trash %}
+                                            <tr>
+                                                {% for col in row[:3] %}
+                                                    <td><span style="font-size: small">&nbsp;&nbsp;&nbsp;{{col}}</span></td>
+                                                {% endfor %}
+                                                <td align="center">
+                                                    <a href="{{ url_for('download_file_trash',filename=row[0]) }}">download</a>
+                                                </td>
+                                                <td align="center">
+                                                    <a href="{{ url_for('recover_file_trash',login_user=login_user,filename=row[0]) }}">put back</a>
                                                 </td>
                                             </tr>
                                         {% endfor %}
@@ -112,7 +120,4 @@
 
     </form>
 
-{% endblock %}
-
-{% block flash_message %}
 {% endblock %}
