update riso and future uspply

--- a/templates/ctb_run.html
+++ b/templates/ctb_run.html
@@ -30,11 +30,11 @@
                             {{ form.file_3a4 }}
                             <br><br>
 
-                        <b>Material supply (downloaded from Kinaxis):</b>
+                    <b><abbr title="Default supply downloaded from Kinaxis">Primary</abbr> supply (downloaded from Kinaxis):</b>
                             {{ form.file_kinaxis_supply }}
                             <br><br>
 
-                        <b> (Optional) PCBA supply (downloaded from PCBA allocation tool)</b>
+                        <b>Optional supply (downloaded from PCBA allocation tool)</b>
                             {{ form.file_allocation_supply }}
 
                 </td>
