exceptional priroity from smartsheet to db

--- a/templates/ctb_base.html
+++ b/templates/ctb_base.html
@@ -69,7 +69,7 @@
 {% block footer %}
             <p align="center" style="font-size: small">
                 2020-10   |
-                <a href="https://app.smartsheet.com/sheets/35WQQCXQCpG4WRgm95q5p6C4V8vwFWCRGFXcgCq1?view=grid" target="_blank">FOC/FDO Exception priority SS</a> |
+                <a href="https://pcba-allocation.cisco.com/exceptional_priority" target="_blank">EXCEPTIONAL_PRIORITY</a> |
                 <a href="https://app.smartsheet.com/sheets/Xwghh9cRQPF6qRv7qQxWpmcqpMV9rJ8gXGw8Qh81?view=grid" target="_blank">FOC/FDO Exception PO</a>
         </p>
 
