--- a/templates/ctb_base.html
+++ b/templates/ctb_base.html
@@ -70,7 +70,7 @@
             <p align="center" style="font-size: small">
                 2020-10   |
                 <a href="https://pcba-allocation.cisco.com/exceptional_priority" target="_blank">EXCEPTIONAL_PRIORITY</a> |
-                <a href="https://app.smartsheet.com/sheets/Xwghh9cRQPF6qRv7qQxWpmcqpMV9rJ8gXGw8Qh81?view=grid" target="_blank">FOC/FDO Exception PO</a>
+                <a href="https://app.smartsheet.com/sheets/GFg4rwgFjHRQ5VFm6fGMW95QFWCff4rRfR698fC1?view=grid" target="_blank">CM_CTB</a>
         </p>
 
 {% endblock %}
