--- a/templates/ctb_run.html
+++ b/templates/ctb_run.html
@@ -5,6 +5,11 @@
 
 {% block content %}
 
+
+        <p style="color: #c82333; font-size:x-large " align="center">This tool will EOL soon, pls use this
+            <a href="http://10.123.219.148/ctb">NEW TOOL</a> instead.
+        </p>
+
 <!--<div class="card container"> -->
     <table width="90%" align="center">
         <tr>
@@ -60,6 +65,8 @@
                 <td width="5%"></td>
             </tr>
         </table>
+
+
         <table style="border-collapse:collapse; " border="0" cellspacing="0px" width="90%" align="center">
             <tr>
                 <td align="center" width="100%">
